[package]
name = "bootstrap-node"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
async-std = { version = "1.12.0", features = ["attributes"] }
libp2p = { version = "0.50.0", features = ["tokio", "async-std", "tcp", "dns", "macros", "kad", "identify", "noise", "mplex", "yamux", "websocket"] }
chrono = "0.4.23"
env_logger = "0.10.0"
tokio = { version = "1.26.0", features = ["full"] }