[package]
name = "bootstrap-node"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
futures = "0.3.25"
libp2p = { version = "0.51.2", features = ["tokio", "async-std", "tcp", "dns", "macros", "kad", "identify", "noise", "mplex", "yamux", "websocket"] }
chrono = "0.4.23"
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }